testsuite/tests/v1/dot_access/unknown_member/test.out
Error: Unknown member
   ╭─[ <working-dir>/script.lkql:2:11 ]
   │
 2 │ print(obj.b)
   │           ┬  
   │           ╰── No member named "b" on the value
───╯
